# n-sql

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  appveyor.yml  build.rs
docs/: CNAME  index.html  sw.js
docs/assets/: download-assets  emoji-download.js  emoji.js
docs/assets/fonts/: font.css
docs/assets/themes/: dark.css  vue.css
docs/contents/: README.md  _sidebar.md  functions.md  introduction.md  playground.md  quick_start.md  support.md
docs/contents/zh-CN/: README.md  _sidebar.md  functions.md  playground.md  support.md
docs/playground/: 3rdpartylicenses.txt  index.html  main.83f2cb663f4fd07402e3.js  styles.cf02a2f376d0dc444793.css
grammars/: grammar.lalrpop
sql-editor/: angular.json  package.json  tslint.json
sql-editor/e2e/src/: app.e2e-spec.ts
sql-editor/src/: index.html  index.prod.html  main.ts  styles.less  tslint.json
sql-editor/src/assets/: n-sql
sql-editor/src/types/: index.d.ts
src/: catalog.rs  grammar.rs  lib.rs  parser.rs  version.rs  wasm.rs
src/ast/: data_type.rs  identifier.rs  mod.rs  sorting_direction.rs
src/ast/expression/: mod.rs
src/ast/statement/: mod.rs  (+5 more)
src/generator/: mod.rs  mysql.rs  oracle.rs  pgsql.rs  sql_server.rs  sqlite.rs  visitor.rs
src/lexer/: char_locations.rs  comment.rs  location.rs  mod.rs  parser_source.rs  source.rs  token.rs
src/optimizer/: mod.rs
tests/: advanced.rs  aggregate.rs  arithmetic.rs  case_when.rs  common.rs  constant_expression.rs  datetime.rs  numeric.rs  pagination.rs  predicate_expression.rs  statement.rs  string.rs  test_example.rs  variable.rs
(+57 files in other folders)
