[package]
name = "n-sql"
version = "0.1.0"
authors = ["YISH <mokeyish@hotmail.com>"]
build = "build.rs" # LALRPOP preprocessing
license = "Apache-2.0/MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lazy_static = "1.3.0"
failure = "0.1.5"
lalrpop-util = "0.16.3"
regex = "1.1.0"
codespan = "0.2"
codespan-reporting = "0.2"
cfg-if = "0.1.2"

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = {version = "0.2"}
console_error_panic_hook = { version = "0.1.1"}
wee_alloc = { version = "0.4.2", optional=true}

[target.'cfg(target_arch="wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.2"

[dev-dependencies]
fluid = "0.3.0"

[build-dependencies]
lalrpop = "0.16.3"


[profile.release]
# Tell `rustc` to optimize for small code size.
lto = true
opt-level = "s"